--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/img.jpeg" alt="" class="gurleen-dp" id="imagePath" />
+        <!-- <img src="img/img.jpeg" alt="" class="gurleen-dp" id="imagePath" /> -->
         <img src="img/hat.svg" alt="" class="hat" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Birthday!</h3>
